# dgpose

./: .gitignore  README.md  fix  main.py  pyproject.toml
src/dgpose/: colors.py  landmarks.py  main.py  overlay.py  pose_estimator.py  process_video.py  run.py  trails.py  video_io.py  wrist_trace.py
src/dgpose.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
