[project]
name = "dgpose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "black>=26.1.0",
    "isort>=7.0.0",
    "mediapipe<0.10.30",
    "opencv-python>=4.13.0.90",
]

[project.scripts]
main = "dgpose.main:main"

[tool.uv]
package = true
